--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {%extends "layout.html" %} 
 {%block content%} 
 
+
 <style>
 body {
     font-family: Arial, sans-serif;
@@ -74,12 +75,12 @@ nav a:hover {
     <h2>Listen to the music fiesta</h2>
 
     <div class="song-block" >
-        <img class="song-image" src="{{ url_for('static', filename='song1.jpg') }}" alt="Song 1 Image">
+        <img class="song-image" src="{{ url_for('static', filename='images/song1.jpg') }}" alt="Song 1 Image">
         Song 1
     </div>
     
     <div class="song-block" >
-        <img class="song-image" src="{{ url_for('static', filename='song2.jpg') }}" alt="Song 2 Image">
+        <img class="song-image" src="{{ url_for('static', filename='images/song2.jpg') }}" alt="Song 2 Image">
         Song 2
     </div>
     
